# dsan6700_app_dev_project

./: .gitignore  Dockerfile.api  docker-compose.yml  get_travel_blogs.ipynb  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/src/api/: main.py  schemas.py
backend/src/data/: generate_dog_data.py  generate_dog_data_with_images.py
configs/: model_config.yaml
src/api/: inference.py  main.py
streamlit_app/: Dockerfile  README.md  app.py  app_old.py  requirements.txt
streamlit_app/.streamlit/: config.toml
