[tool.poetry]
name = "travel-backend"
version = "0.1.0"
description = "Off-the-Beaten-Path"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115,<1.0"
uvicorn = {extras = ["standard"], version = ">=0.30,<1.0"}
pydantic = ">=2.7,<3.0"
numpy = ">=1.26"
pandas = ">=2.2"
joblib = ">=1.3"
scikit-learn = ">=1.4,<2.0"
xgboost = ">=2.0"
pyyaml = ">=6.0"

[build-system]
requires = ["poetry-core>=1.7.1"]
build-backend = "poetry.core.masonry.api"